# EmojiClu

./: .gitignore  Cargo.toml  FLUENT_I18N_GUIDE.md  LICENSE  Makefile  README.md  RELEASE.md  TODO.md  app.rc  build-windows.sh  build.rs  cargo-sources.json  config-windows.sh  io.github.timcharper.EmojiClu.yml  org.timcharper.EmojiClu.yml  org.timcharper.MindHunt.desktop  org.timcharper.MindHunt.yml  package-windows.sh
bundle/: installer.nsi
locales/en-US/: main.ftl
locales/es/: main.ftl
locales/fr/: main.ftl
packaging/windows/: build-windows.sh  config-windows.sh  installer.nsi  package-windows.sh
resources/: emojiclu-icon.afdesign  gnomeclu-icon.afphoto  io.github.timcharper.EmojiClu.desktop  resources.xml  style.css
scripts/: .gitignore  emojis.sh  letters.sh  numbers.sh
src/: destroyable.rs  helpers.rs  lib.rs  main.rs
src/events/: channel.rs  event_handler.rs  mod.rs
src/game/: candidate_solver.rs  clue_completion_evaluator.rs  clue_constraint.rs  clue_generator.rs  clue_generator_state.rs  constraint_solver.rs  game_engine.rs  game_event.rs  game_state.rs  hidden_pair_finder.rs  mod.rs  puzzle_variants.rs  settings.rs  solution.rs  solver.rs  solver_helpers.rs  stats_manager.rs
src/model/: addressed_clue.rs  candidate.rs  clue.rs  clue_address.rs  clue_orientation.rs  clue_set.rs  clue_with_grouping.rs  deduction.rs  difficulty.rs  game_action_event.rs  game_board.rs  game_engine_command.rs  game_engine_event.rs  game_event.rs  game_state_event.rs  game_state_snapshot.rs  game_stats.rs  global_event.rs  input_event.rs  layout.rs  layout_manager_event.rs  mod.rs  partial_solution.rs  settings_event.rs  tile.rs  (+5 more)
(+56 files in other folders)
