[package]
name = "emojiclu"
version = "1.1.3"
edition = "2021"
build = "build.rs"

[dependencies]
log = { version = "^0.4.25", features = ["max_level_trace"] }
env_logger = "^0.11.6"
gtk4 = { version = "^0.9.5", package = "gtk4", features = ["v4_14"] }
gdk-pixbuf = "^0.20.7"
gio = "^0.20.7"
glib = "^0.20.7"
rand = "^0.9"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_json = "^1.0"
chrono = "^0.4"
uuid = { version = "^1.4", features = ["v4", "serde"] }
itertools = "^0.14"
serial_test = "^3.2.0"
readonly = "^0.2.12"
fixed = "^1.28.0"
serde_with = "^3.12.0"
fluent-i18n = "0.1.0-rc.1"

[dev-dependencies]
test-context = "^0.3.0"

[build-dependencies]
glib-build-tools = "^0.20.0"
image = "^0.25.6"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
rustflags = ["-L./packaging/gtk/lib", "-L./packaging/gtk/bin"]
